Fixed modal backdrop appearing behind submenu panel

--- a/assets/admin/src/css/admin.scss
+++ b/assets/admin/src/css/admin.scss
@@ -187,7 +187,7 @@ button {
       .submenu-panel {
         opacity: 1;
         width: 280px;
-        z-index:100;
+        z-index: 78;
 
         > ul {
           left: 0;
